fix(pagination): icon center aligned

--- a/packages/theme-chalk/src/pagination.scss
+++ b/packages/theme-chalk/src/pagination.scss
@@ -81,6 +81,7 @@
       display: block;
       font-size: 12px;
       font-weight: bold;
+      width: inherit;
     }
   }
 
